# sereact_teleoperation_task

./: Dockerfile  README.md  eye_bridge.py
gesture_bot_ws/: README.md  docker-compose.yml
gesture_bot_ws/src/dual_arm_bringup/launch/: view_robot.launch.py
gesture_bot_ws/src/dual_arm_description/: CMakeLists.txt
gesture_bot_ws/src/dual_arm_description/urdf/: dual_ur5.urdf.xacro
gesture_bot_ws/src/dual_arm_moveit_config/launch/: verify_brain.launch.py
gesture_bot_ws/src/gesture_teleop/: package.xml
gesture_bot_ws/src/gesture_teleop/gesture_teleop/: gesture_control_node.py
src/dual_arm_bringup/: CMakeLists.txt  package.xml
src/dual_arm_description/: package.xml
src/dual_arm_moveit_config/: CMakeLists.txt  package.xml
src/dual_arm_moveit_config/config/: dual_ur5_bot.srdf  kinematics.yaml  ompl_planning.yaml
src/gesture_teleop/: setup.cfg  setup.py
src/gesture_teleop/gesture_teleop/: ik_commander.py
