<?xml version="1.0"?>
<package format="3">
  <name>gesture_teleop</name>
  <version>0.0.0</version>
  <description>Gesture_Bot</description>
  <maintainer email="vgdharnishkumar@gmail.com">dharnish</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
